--- a/index.html
+++ b/index.html
@@ -96,11 +96,21 @@
     </footer>
 
     <script>
+      function trailingZero(string) {
+        return string.length === 1 ? "0" + string.toString() : string;
+      }
+
       function init() {
+        document.body.style.backgroundColor = "red";
+
+        var user_code = "XXXX-XXXX";
+        var verification_url = "https://www.google.com/device";
+        var expires_in = 0;
+
         // Block non ps vita browser
         // 960x544 + User Agent...
-        const isPSP2 = navigator.userAgent.includes("PlayStation Vita");
-        const rightDimensions =
+        var isPSP2 = navigator.userAgent.includes("PlayStation Vita");
+        var rightDimensions =
           window.innerWidth === 960 && window.innerHeight === 544;
         if (!isPSP2 || !rightDimensions) {
           document.body.innerHTML =
@@ -108,18 +118,7 @@
           return;
         }
 
-        String.prototype.trailingZero = function trailingZero() {
-          return this.length === 1 ? "0" + this.toString() : this;
-        };
-
-        let user_code = "XXXX-XXXX";
-        let verification_url = "https://www.google.com/device";
-        let expires_in = 0;
-
-        document.body.style.backgroundColor = "red";
-        document.body.innerHTML = verification_url;
-
-        const search = location.search.replace("?", "").split("&");
+        var search = location.search.replace("?", "").split("&");
         search.forEach(function (param) {
           switch (param.split("=")[0]) {
             case "user_code":
@@ -134,17 +133,17 @@
           }
         });
 
-        const timer = new Date(expires_in * 1000);
+        var timer = new Date(expires_in * 1000);
 
-        const entry = document.getElementById("user_code");
+        var entry = document.getElementById("user_code");
         entry.innerHTML = user_code;
 
-        const device_page = document.getElementById("verification_url");
+        var device_page = document.getElementById("verification_url");
         device_page.innerHTML = verification_url;
         device_page.href = verification_url;
 
-        const display_timer = document.getElementById("display-timer");
-        const timerInterval = setInterval(function () {
+        var display_timer = document.getElementById("display-timer");
+        var timerInterval = setInterval(function () {
           if (timer.getTime() === 0) {
             clearInterval(timerInterval);
             display_timer.parentElement.innerHTML =
@@ -154,9 +153,9 @@
 
           timer.setTime(timer.getTime() - 1000);
           display_timer.innerHTML =
-            timer.getUTCMinutes().toString().trailingZero() +
+            trailingZero(timer.getUTCMinutes().toString()) +
             ":" +
-            timer.getUTCSeconds().toString().trailingZero();
+            trailingZero(timer.getUTCSeconds().toString());
         }, 1000);
       }
     </script>
