--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
     </style>
 
-    <link rel="icon" type="image/x-icon" href="ps_vita_sync_logo_icon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="ps_vita_sync_logo_icon.ico" />
     <title>PS Vita Sync Verification Page</title>
   </head>
 
