--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+    
     <meta
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, user-scalable=no"
